// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generates A3 string 1`] = `
Array [
  "A#3",
  "B3",
  "C4",
  "Db4",
  "D4",
  "D#4",
  "E4",
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
]
`;

exports[`generates E4 string 1`] = `
Array [
  "F4",
  "Gb4",
  "G4",
  "Ab4",
  "A4",
  "A#4",
  "B4",
  "C5",
  "Db5",
  "D5",
  "Eb5",
  "E5",
]
`;

exports[`generates a P5 StringsFlatNote 1`] = `
Array [
  "E4",
  "A3",
  "D3",
  "G2",
  "C2",
  "F1",
]
`;

exports[`generates a Quart fretboard 1`] = `null`;
